fixed issues with certain property modifer tuples not working properly on all types

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
+    "luau-lsp.completion.enabled": false,
+    "luau-lsp.completion.enableFragmentAutocomplete": true,
+    "luau-lsp.fflags.enableNewSolver": true
 
 }
