--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "rsml-cli"
-version = "0.0.2"
+version = "0.0.4"
 edition = "2024"
 
 [dependencies]
 rbx_types = "2.0.0"
-rbx-rsml = "0.1.8"
+rbx-rsml = "0.1.11"
 guarded = "0.0.2"
 serde_json = "1.0.140"
 serde = "1.0.219"
@@ -16,4 +16,4 @@ normalize-path = "0.2.1"
 notify = "8.0.0"
 fs-err = "2.3.0"
 multimap = "0.10.1"
-clap = { version = "4.5.38", features = ["derive"] }
+clap = { version = "4.5.39", features = ["derive", "cargo"] }
