--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,3 @@
-# Modified from Rojo's release script: https://github.com/rojo-rbx/rojo.
-
 name: Release
 
 on:
@@ -59,16 +57,26 @@ jobs:
         with:
           targets: ${{ matrix.target }}
 
-      - name: Cache Rust
-        uses: Swatinem/rust-cache@v2
+      - name: Restore Rust Cache
+        uses: actions/cache/restore@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ matrix.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
         
-
       - name: Build Release
         run: cargo build --release --locked --verbose --target ${{ matrix.target }}
-        env:
-          # Build into a known directory so we can find our build artifact more
-          # easily.
-          CARGO_TARGET_DIR: output
+
+      - name: Save Rust Cache
+        uses: actions/cache/save@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ matrix.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Generate Artifact Name
         shell: bash
@@ -85,11 +93,11 @@ jobs:
           mkdir staging
 
           if [ "${{ matrix.host }}" = "windows" ]; then
-            cp "output/${{ matrix.target }}/release/$BIN.exe" staging/
+            cp "target/${{ matrix.target }}/release/$BIN.exe" staging/
             cd staging
             7z a ../$ARTIFACT_NAME *
           else
-            cp "output/${{ matrix.target }}/release/$BIN" staging/
+            cp "target/${{ matrix.target }}/release/$BIN" staging/
             cd staging
             zip ../$ARTIFACT_NAME *
           fi
