--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "rsml-cli"
-version = "0.0.11"
+version = "0.0.12"
 edition = "2024"
 
 [dependencies]
+#rbx-rsml = "0.1.11"
+rbx-rsml = { path = "../rsml-rust" }
 rbx_types = "2.0.0"
-rbx-rsml = "0.1.11"
 serde_json = "1.0.143"
 serde = "1.0.219"
 memofs = "0.3.0"
