--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,7 @@ version = "0.0.12"
 edition = "2024"
 
 [dependencies]
-#rbx-rsml = "0.1.11"
-rbx-rsml = { path = "../rsml-rust" }
+rbx-rsml = "0.1.11"
 rbx_types = "2.0.0"
 serde_json = "1.0.143"
 serde = "1.0.219"
